# TaskTest_HSE

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: Dockerfile  pyproject.toml
app/api/: repository.py  serializer.py  serializers.py  services.py  urls.py  views.py
app/app/: config.py  settings.py  urls.py
app/core/: filters.py  models.py  validators.py  views.py
app/trades/: admin.py  models.py
app/trades/migrations/: 0001_initial.py  0002_alter_user_name.py  0002_initial.py  0003_trade_unique_trades.py  0004_remove_trade_unique_trades.py  0005_trade_unique_trades.py  0006_remove_trade_unique_trades.py
app/users/: admin.py  models.py
app/users/migrations/: 0001_initial.py
infra/: docker-compose.yml  nginx.conf
